# myGeo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  definitionParser.cpp  definitionParser.h  drawingCanvas.cpp  drawingCanvas.h  geoTransform.cpp  geoTransform.h  main.cpp  myFrame.cpp  myFrame.h  nameHandler.cpp  nameHandler.h  sidePanel.cpp  sidePanel.h
src/geoObjects/: CMakeLists.txt  geoCircle.cpp  geoCircle.h  geoConic.cpp  geoConic.h  geoCurve.cpp  geoCurve.h  geoEllipse.cpp  geoEllipse.h  geoHyperbola.cpp  geoHyperbola.h  geoLine.cpp  geoLine.h  geoLineBase.h  geoObject.cpp  geoObject.h  geoParabola.cpp  geoParabola.h  geoPoint.cpp  geoPoint.h  geoSegment.cpp  geoSegment.h
src/geoTransforms/: CMakeLists.txt  geoTransform.cpp  geoTransform.h  geoTransformBase.cpp  geoTransformBase.h
src/sidePanel/: CMakeLists.txt  objectDialog.cpp  objectDialog.h  sidePanel.cpp  sidePanel.h
src/tools/: CMakeLists.txt  angleBisectorTool.cpp  angleBisectorTool.h  circleBy2PTool.cpp  circleBy2PTool.h  circleBy3PTool.cpp  circleBy3PTool.h  circleInverseTool.cpp  circleInverseTool.h  conicBy5PTool.cpp  conicBy5PTool.h  ellipseByFociTool.cpp  ellipseByFociTool.h  handTool.cpp  handTool.h  homothetyTool.cpp  homothetyTool.h  hyperByFociTool.cpp  hyperByFociTool.h  isoConjTool.cpp  isoConjTool.h  lineBy2PTool.cpp  lineBy2PTool.h  lineReflectTool.cpp  lineReflectTool.h  midpointTool.cpp  midpointTool.h  parabByFocDirTool.cpp  parabByFocDirTool.h  paralLineTool.cpp  paralLineTool.h  perpBisector.cpp  perpBisector.h  perpBisectorTool.cpp  perpBisectorTool.h  perpLineTool.cpp  perpLineTool.h  pointReflectTool.cpp  pointReflectTool.h  pointTool.cpp  (+14 more)
(+14 files in other folders)
